--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>KIYASLIO</title>
-	 <link rel="stylesheet" href="kiyaslio.css">
+	 <link rel="stylesheet" href="css/main.css">
 	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
