--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    <div class="hersey">
 	    	<h1><b class="baslik">ÇOK YAKINDA SİZLERLE!</b></h1>
 	    	 <div>
-	    	<img src="kiyweb.png" class="photo">
+	    	<img src="img/kiyweb.png" class="photo">
 		</div>
 	    	<div class="yazilar"><b>Kıyaslio</b>, sanal marketlerdeki ürünlerin fiyatlarını sepet bazında karşılaştıran bir alışveriş danışmanıdır.
 	    		<p>İstediğiniz zaman bize ulaşabilirsiniz!</p></div>
